--- a/modified pages/landing-boys.component.html
+++ b/modified pages/landing-boys.component.html
@@ -77,7 +77,7 @@
 	    	<div class="row">  
 				<div class="col-lg-6 col-md-6 col-sm-12 age-block">
     				<a class="card-img" href="#">
-						<img src="../../../assets/img/landing-page-boys/age1.jpg" class="img-fluid w-50" title="Ombre Print Full-Sleeves Shirt" alt="Ombre Print Full-Sleeves Shirt"> 
+						<img src="../../../assets/img/landing-page-boys/age1.jpg" class="img-fluid w-50 img-effects" title="Ombre Print Full-Sleeves Shirt" alt="Ombre Print Full-Sleeves Shirt"> 
 						<div class="white-card d-inline-block">			
     						<div class="label-box__textarea">
     							<p class="label-box__title text-center">2 -7 <br> Years</p>
@@ -89,7 +89,7 @@
 
      	    	<div class="col-lg-6 col-md-6 col-sm-12 age-block">
     				<a class="card-img" href="#">
-   						<img src="../../../assets/img/landing-page-boys/age2.jpg" class="img-fluid w-50" title="Ombre Print Full-Sleeves Shirt" alt="Ombre Print Full-Sleeves Shirt"> 			
+   						<img src="../../../assets/img/landing-page-boys/age2.jpg" class="img-fluid w-50 img-effects" title="Ombre Print Full-Sleeves Shirt" alt="Ombre Print Full-Sleeves Shirt"> 			
     					<div class="white-card d-inline-block">
     						<div class="label-box__textarea">
 	    						<p class="label-box__title text-center">7 - 14 <br> Years</p>
