--- a/modified pages/landing-boys.component.scss
+++ b/modified pages/landing-boys.component.scss
@@ -93,7 +93,7 @@
     			transition: all .3s ease-out;
     			width: 15.75%;
     			border: 1px solid #00000024;
-    			background: #f9f9f9;
+    			background: $flash-info-bg;
     			padding: 0;
     			margin: 0 4px;
     			border-radius:6px;
@@ -104,7 +104,7 @@
 				    font-size: 16px;
 				    white-space: nowrap;
 				    overflow: visible;
-				    color: #000;
+				    color: $black;
 				    transition: all 0.3s ease-out;
 				    text-align:center;
 				    margin: 0 0.6rem;
@@ -156,15 +156,30 @@
 
 .shop_by_age{
 	.age-block{
+		.img-effects{
+			&:hover{
+				-webkit-mask-image: linear-gradient(-75deg, rgba(0,0,0,.6) 30%, #000 50%, rgba(0,0,0,.6) 70%);
+				-webkit-mask-size: 200%;
+  				animation: shine 2s infinite;
+			}
+			@-webkit-keyframes shine {
+				from {
+					-webkit-mask-position: 150%;
+				}			  
+				to {
+				   -webkit-mask-position: -50%;
+				}
+			}
+		}
 		.white-card{
 			background: white;
-			box-shadow: 2px 3px 13px -2px #cacaca;
+			box-shadow: 2px 3px 13px -2px $gray-400;
 			width: 45%;
     		height: auto;
     		margin: 0;
     		vertical-align: middle;
 			.label-box__textarea{
-			    color: #000;
+			    color: $black;
 			    text-align: center;
 			    margin: 6% 12% 32% 12%;
 			    position: relative;
@@ -182,13 +197,19 @@
 				.action__block{
 				    border-radius: 0;
 				    padding: 0.4rem 0.9rem;
-				    color: #ffffff;
+				    color: $white;
 				    text-transform: uppercase;
 				    font-weight: bold;
-				    background: #dc3545;
+				    background: $red;
 				    font-size: 15px;
+				    box-shadow: inset 0 0 0 0 $black;
+					-webkit-transition: ease-out 0.8s;
+					transition: ease-out 0.8s;
 				    @media(max-width:425px){
 						font-size: 10px;
+					}
+					&:hover{
+						box-shadow: inset 400px 0 0 0 $black;
 					}
 				}
 				@media (max-width:575px){
@@ -229,9 +250,9 @@
 			    bottom: 0;
 			    right: 0;
 			    left: 0;
-			    background-color: #dc3545;
+			    background-color: $red;
 			    width: 61px;
-			    color: #fff;
+			    color: $white;
 			    margin: auto;
 			    font-size: initial;
 			}
@@ -246,12 +267,12 @@
 
 .brands{
 	.white-hover{
-		background-color: #afafaf3b;
+		background-color: $gray-200;
     	height: 100%;
     	margin: 0 5px;
     	filter: grayscale(100%);
 		opacity:0.7;
-		transition: 0.8s;
+		transition: 0.3s;
 		.figure{
 		    text-align: center;
     		margin: auto;
@@ -281,7 +302,7 @@
 		margin-bottom: 27px;
 	    .btn-default{
 			background-color: #00000075;
-			border: 1px solid #f8f9fa;
+			border: 1px solid $gray-100;
 			padding: 0.5rem;
 			font-size: 16px;
 			color:$white;
@@ -324,19 +345,18 @@
 	overflow: hidden;
 	.label-box__textarea{
 		text-align:center;
-		position: absolute;
-		left:0;
-		right:0;
-		bottom:25%;
+		display:flex;
+		flex-direction:column;
+		margin-top: 15%;
 		.label-box__title{
 			font-size: 5vw;
 			color: $black;
 	    	font-weight: $font-weight-bold;
 	    	text-transform:uppercase;
 	    	text-shadow: 1px 2px 1px;
-	    	@media (max-width:767px){
-	    		color:#fff;
-	    	}
+	    	@media (max-width: 768px){
+		    	color: $white;
+	        }
 	    	@media (max-width:575px){
 	    		font-size:8vw;
 	    	}
@@ -356,17 +376,10 @@
 	        margin: auto;
 			border-radius: 0px;
 	    }
-	    @media (max-width:767px){
-		    position: absolute;
-		    left: 0;
-		    right: 0;
-		    top: 0;
-		    z-index: 1;
-		    margin-top: 15%;
-		    color:$white;
-	    }
-	    @media (max-width: 575px){
-	    	margin-top: 5%;
+	    @media (max-width: 768px){
+	    	position:absolute;
+	    	z-index: 1;
+	    	color: $white;
 	    }
 	}
 	@media (max-width:767px){
